welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:23: error: illegal start of simple expression
	while( )
               ^Balin:30: error: ')' expected but '}' found.
}
^Balin:31: error: ';' expected but 'else' found.
else
^