welcome.lessons.welcome.loopwhile.WhileMoria.scala.code

droite()
droite()
avance()
avance()
avance()
avance()
avance()


while ( !estSurBiscuit)
{
	avance()
}

while ( estSurBiscuit)
{
	prendBiscuit()
	porteBiscuit()
	gauche()
	gauche()
	while( )
	{
		avance()
		
	}
	poseBiscuit()
	
}
else
{
	recule()
}










	















